--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,8 +65,10 @@ install(FILES ${CMAKE_BINARY_DIR}/DKH_MANGLE.h
         DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/DKH)
 install(TARGETS dkh
         EXPORT "${PN}Targets"
+        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
         ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
 # <<<  Export Interface  >>>
 
