--- a/cmake/dkhConfig.cmake.in
+++ b/cmake/dkhConfig.cmake.in
@@ -5,12 +5,23 @@
 # This module sets the following variables in your project::
 #
 #   dkh_FOUND - true if dkh and all required components found on the system
-#   dkh_VERSION - dkh version in format Major.Minor.Release
-#   dkh_INCLUDE_DIRS - Directories where dkh header is located.
-#   dkh_INCLUDE_DIR - same as DIRS
+#   dkh_VERSION - dkh version in format Major.Minor.Release. Prefer target variable.
+#   dkh_INCLUDE_DIRS - Directories where dkh header and andy dependent headers are located. Prefer targets.
+#   dkh_INCLUDE_DIR - Directories where dkh header is located. Prefer targets.
 #   dkh_DEFINITIONS: Definitions necessary to use dkh, namely USING_dkh.
-#   dkh_LIBRARIES - dkh library to link against.
-#   dkh_LIBRARY - same as LIBRARIES
+#   dkh_LIBRARIES - dkh library to link against plus any dependent libraries. Prefer targets.
+#   dkh_LIBRARY - dkh library to link against. Prefer targets.
+#
+#
+# Target variables:
+#
+# It is preferred to use properties set on the base target rather than using the above variables.
+#
+# ::
+#
+#   dkh_VERSION - dkh version in format Major.Minor.Release
+#
+#   get_property(_ver TARGET dkh::dkh PROPERTY dkh_VERSION)
 #
 #
 # Available components: shared static ::
@@ -44,85 +55,61 @@
 
 @PACKAGE_INIT@
 
-set(PN dkh)  # NameSpace
-set (_valid_components
-    static
-    shared
-)
+set(dkh dkh)  # NameSpace
 
-# find includes
-unset(_temp_h CACHE)
-find_path(_temp_h
-          NAMES DKH/DKH_MANGLE.h
-          PATHS ${PACKAGE_PREFIX_DIR}/@CMAKE_INSTALL_INCLUDEDIR@
-          NO_DEFAULT_PATH)
-if(_temp_h)
-    set(${PN}_INCLUDE_DIR "${_temp_h}")
-    set(${PN}_INCLUDE_DIRS ${${PN}_INCLUDE_DIR})
+# check library style component
+if (@BUILD_SHARED_LIBS@)  # BUILD_SHARED_LIBS
+    set(${dkh}_shared_FOUND 1)
 else()
-    set(${PN}_FOUND 0)
-    if(NOT CMAKE_REQUIRED_QUIET)
-        message(STATUS "${PN}Config missing component: header (${PN}: ${_temp_h})")
-    endif()
+    set(${dkh}_static_FOUND 1)
 endif()
-
-# find library: shared, static, or whichever
-set(_hold_library_suffixes ${CMAKE_FIND_LIBRARY_SUFFIXES})
-list(FIND ${PN}_FIND_COMPONENTS "shared" _seek_shared)
-list(FIND ${PN}_FIND_COMPONENTS "static" _seek_static)
-if(_seek_shared GREATER -1)
-    set(CMAKE_FIND_LIBRARY_SUFFIXES ${CMAKE_SHARED_LIBRARY_SUFFIX})
-elseif(_seek_static GREATER -1)
-    set(CMAKE_FIND_LIBRARY_SUFFIXES ${CMAKE_STATIC_LIBRARY_SUFFIX})
-endif()
-unset(_temp CACHE)
-find_library(_temp
-             NAMES dkh
-             PATHS ${PACKAGE_PREFIX_DIR}/@CMAKE_INSTALL_LIBDIR@
-             NO_DEFAULT_PATH)
-if(_temp)
-    set(${PN}_LIBRARY "${_temp}")
-    if(_seek_shared GREATER -1)
-        set(${PN}_shared_FOUND 1)
-    elseif(_seek_static GREATER -1)
-        set(${PN}_static_FOUND 1)
-    endif()
-else()
-    if(_seek_shared GREATER -1)
-        if(NOT CMAKE_REQUIRED_QUIET)
-            message(STATUS "${PN}Config missing component: shared library (${PN}: ${_temp})")
-        endif()
-    elseif(_seek_static GREATER -1)
-        if(NOT CMAKE_REQUIRED_QUIET)
-            message(STATUS "${PN}Config missing component: static library (${PN}: ${_temp})")
-        endif()
-    else()
-        set(${PN}_FOUND 0)
-        if(NOT CMAKE_REQUIRED_QUIET)
-            message(STATUS "${PN}Config missing component: library (${PN}: ${_temp})")
-        endif()
-    endif()
-endif()
-set(CMAKE_FIND_LIBRARY_SUFFIXES ${_hold_library_suffixes})
-set(${PN}_LIBRARIES ${${PN}_LIBRARY})
-set(${PN}_DEFINITIONS USING_${PN})
+list(FIND ${dkh}_FIND_COMPONENTS "shared" _seek_shared)
+list(FIND ${dkh}_FIND_COMPONENTS "static" _seek_static)
 
 # make detectable the various cmake modules exported alongside
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR})
 
+# check library dependency available
 include(CMakeFindDependencyMacro)
 if(NOT TARGET tgt::lapack)
     find_dependency(TargetLAPACK)
 endif()
-set(PN dkh)  # NameSpace
 
-check_required_components(${PN})
+# Check all required components are available before trying to load any
+check_required_components(${dkh})
 
 #-----------------------------------------------------------------------------
 # Don't include targets if this file is being picked up by another
 # project which has already built this as a subproject
 #-----------------------------------------------------------------------------
-if(NOT TARGET ${PN}::${PN})
-    include("${CMAKE_CURRENT_LIST_DIR}/${PN}Targets.cmake")
+if(NOT TARGET ${dkh}::dkh)
+    include("${CMAKE_CURRENT_LIST_DIR}/${dkh}Targets.cmake")
+
+    get_property(_loc TARGET ${dkh}::dkh PROPERTY LOCATION)
+    get_property(_ill TARGET ${dkh}::dkh PROPERTY INTERFACE_LINK_LIBRARIES)
+    get_property(_iid TARGET ${dkh}::dkh PROPERTY INTERFACE_INCLUDE_DIRECTORIES)
+    get_property(_icd TARGET ${dkh}::dkh PROPERTY INTERFACE_COMPILE_DEFINITIONS)
+    set(${dkh}_LIBRARY ${_loc})
+    set(${dkh}_LIBRARIES ${_loc};${_ill})
+    set(${dkh}_INCLUDE_DIR ${_iid})
+    set(${dkh}_INCLUDE_DIRS ${_iid})
+    set(${dkh}_DEFINITIONS ${_icd})
+
+    if (CMAKE_VERSION VERSION_GREATER 3.15)
+        message(VERBOSE "dkh::dkh")
+
+        get_property(_ver TARGET ${dkh}::dkh PROPERTY dkh_VERSION)
+        message(VERBOSE "${dkh}::dkh.${dkh}_VERSION ${_ver}")
+
+        message(VERBOSE "${dkh}_FOUND                  ${${dkh}_FOUND}")
+        message(VERBOSE "${dkh}_VERSION                ${${dkh}_VERSION}")
+        message(VERBOSE "${dkh}_DEFINITIONS            ${${dkh}_DEFINITIONS}")
+
+        message(VERBOSE "${dkh}_LIBRARY                ${${dkh}_LIBRARY}")
+        message(VERBOSE "${dkh}_LIBRARIES              ${${dkh}_LIBRARIES}")
+        message(VERBOSE "${dkh}_INCLUDE_DIR            ${${dkh}_INCLUDE_DIR}")
+        message(VERBOSE "${dkh}_INCLUDE_DIRS           ${${dkh}_INCLUDE_DIRS}")
+    endif()
+
 endif()
 
