CMake and Windows build updates (#6)
* look for blas

* install bin

* install targetlapack

* detect

* modernize config

* intermed

* fix

* more fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,8 @@
 cmake_policy(SET CMP0048 NEW)  # project_VERSION* variables populated from project(... VERSION x.x.x) string
+if (CMAKE_VERSION VERSION_GREATER_EQUAL "3.24.0")
+    # Avoid warning about DOWNLOAD_EXTRACT_TIMESTAMP in CMake 3.24:
+    cmake_policy(SET CMP0135 NEW)
+endif()
 project(dkh
         VERSION 1.2
         LANGUAGES Fortran C)
@@ -22,6 +26,7 @@ option_with_print(ENABLE_OPENMP "Enable threadsafe linking to OpenMP parallelize
 option_with_print(ENABLE_GENERIC "Enable mostly static linking in shared library" OFF)
 option_with_flags(ENABLE_XHOST "Enable processor-specific optimization" ON
                     "-xHost" "-march=native")
+option_with_default(dkh_INSTALL_CMAKEDIR "Directory to which dkh CMake config files installed." share/cmake/dkh)
 
 ######################### Process & Validate Options ###########################
 include(autocmake_safeguards)
@@ -33,9 +38,11 @@ include(GNUInstallDirs)
 include(FortranCInterface)
 include(CMakePackageConfigHelpers)
 
-set(PN ${PROJECT_NAME})
+set(dkh ${PROJECT_NAME})  # NameSpace
 
 # <<<  Build  >>>
+
+set(CMAKECONFIG_INSTALL_DIR "${dkh_INSTALL_CMAKEDIR}")
 
 FortranCInterface_HEADER(DKH_MANGLE.h
                          MACRO_NAMESPACE "DKH_MANGLE_"
@@ -46,6 +53,7 @@ string(REGEX REPLACE "([^;]+)" "${src_prefix}\\1" sources_list "${raw_sources_li
 
 # STATIC/SHARED on below governed by BUILD_SHARED_LIBS
 add_library(dkh ${sources_list})
+add_library(${dkh}::dkh ALIAS dkh)
 set_target_properties(dkh PROPERTIES POSITION_INDEPENDENT_CODE ${BUILD_FPIC})
 if(${BUILD_SHARED_LIBS})
     target_link_libraries(dkh PRIVATE ${LIBC_INTERJECT})
@@ -55,35 +63,49 @@ if(${BUILD_SHARED_LIBS})
     endif()
 endif()
 
+# BLAS
+find_package(TargetLAPACK REQUIRED)
+target_link_libraries (dkh PUBLIC tgt::lapack)
+
 # <<<  Install  >>>
 
-install(FILES ${CMAKE_BINARY_DIR}/DKH_MANGLE.h
+install(FILES ${PROJECT_BINARY_DIR}/DKH_MANGLE.h
         DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/DKH)
 install(TARGETS dkh
-        EXPORT "${PN}Targets"
+        EXPORT "${dkh}Targets"
+        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
         ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
 # <<<  Export Interface  >>>
 
-target_compile_definitions(dkh INTERFACE USING_${PN})
+target_compile_definitions(dkh INTERFACE USING_${dkh})
 target_include_directories(dkh INTERFACE
                            $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
 
+set(export_properties
+  "dkh_VERSION"
+  )
+  set_target_properties(dkh
+    PROPERTIES
+      dkh_VERSION ${dkh_VERSION}
+    )
+set_property(TARGET dkh APPEND PROPERTY EXPORT_PROPERTIES "${export_properties}")
+
 # <<<  Export Config  >>>
 
-    # explicit "share" not "DATADIR" for CMake search path
-set(CMAKECONFIG_INSTALL_DIR "share/cmake/${PN}")
-configure_package_config_file(cmake/${PN}Config.cmake.in
-                              "${CMAKE_CURRENT_BINARY_DIR}/${PN}Config.cmake"
+configure_package_config_file(cmake/${dkh}Config.cmake.in
+                              "${CMAKE_CURRENT_BINARY_DIR}/${dkh}Config.cmake"
                               INSTALL_DESTINATION ${CMAKECONFIG_INSTALL_DIR})
-write_basic_package_version_file(${CMAKE_CURRENT_BINARY_DIR}/${PN}ConfigVersion.cmake
-                                 VERSION ${${PN}_VERSION}
+write_basic_package_version_file(${CMAKE_CURRENT_BINARY_DIR}/${dkh}ConfigVersion.cmake
+                                 VERSION ${${dkh}_VERSION}
                                  COMPATIBILITY AnyNewerVersion)
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PN}Config.cmake
-              ${CMAKE_CURRENT_BINARY_DIR}/${PN}ConfigVersion.cmake
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${dkh}Config.cmake
+              ${CMAKE_CURRENT_BINARY_DIR}/${dkh}ConfigVersion.cmake
+              cmake/FindTargetLAPACK.cmake
         DESTINATION ${CMAKECONFIG_INSTALL_DIR})
-install(EXPORT "${PN}Targets"
-        NAMESPACE "${PN}::"
+install(EXPORT "${dkh}Targets"
+        NAMESPACE "${dkh}::"
         DESTINATION ${CMAKECONFIG_INSTALL_DIR})
 
